--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,42 @@ readme = "README.md"
 python = "^3.12"
 
 
+[tool.poetry.group.link.dependencies]
+flake8 = "^7.1.1"
+mypy = "^1.14.1"
+black = "^24.10.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+# Максимальная длина строки
+line-length = 119
+# Файлы, которые не нужно форматировать
+exclude = '''
+(
+  /(
+ \.eggs     # Исключить несколько общих каталогов
+  | \.git   # в корне проекта
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+   | \.venv
+   | dist
+ )/
+  | foo.py    # Также отдельно исключить файл с именем foo.py
+            # в корне проекта
+)
+'''
+
+[tool.isort]
+# максимальная длина строки
+line_length = 119
+profile = "black"
+
+[tool.mypy]
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+exclude = '.venv'
