--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1.4"
 python-dotenv = "^1.0.1"
 psycopg2 = "^2.9.10"
 pillow = "^11.1.0"
+requests = "^2.32.3"
 
 
 [tool.poetry.group.link.dependencies]
