--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.1"
 psycopg2 = "^2.9.10"
 pillow = "^11.1.0"
 requests = "^2.32.3"
+ipython = "^8.31.0"
 
 
 [tool.poetry.group.link.dependencies]
