--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2 = "^2.9.10"
 pillow = "^11.1.0"
 requests = "^2.32.3"
 ipython = "^8.31.0"
+redis = "^5.2.1"
 
 
 [tool.poetry.group.link.dependencies]
